--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -11,9 +11,7 @@ confinement: strict
 adopt-info: projet-serre-api
 
 architectures:
-  - build-on: amd64
-  - build-on: arm64
-  - build-on: armhf
+  - build-on: [arm64, armhf, amd64]
 
 apps:
   projet-serre-api:
