--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -15,8 +15,13 @@ architectures:
   - build-on: armhf
   - build-on: amd64
 
+slots:
+  serial:
+    interface: serial-port
+    path: /dev/ttyAMA0
+
 apps:
-  projet-serre-api:
+  projet-serre:
     command: bin/projet-serre-api
     daemon: simple
     restart-condition: always
@@ -27,9 +32,11 @@ apps:
     daemon: simple
     restart-condition: always
     plugs: [home, serial-port]
+    slots:
+      - serial
 
 parts:
-  projet-serre-api:
+  projet-serre:
     plugin: npm
     npm-node-version: "14.16.0"
     source: https://github.com/anrouxel/projet-serre-api.git
