--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,7 +8,7 @@ base: core20
 grade: stable
 confinement: strict
 
-adopt-info: projet-serre-api
+adopt-info: projet-serre
 
 architectures:
   - build-on: arm64
