--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,15 +8,110 @@ base: core20
 grade: stable
 confinement: strict
 
-adopt-info: projet-serre-api
+adopt-info: projet-serre
 
 architectures:
   - build-on: arm64
   - build-on: armhf
   - build-on: amd64
 
+slots:
+  bcm-gpio-0:
+    interface: gpio
+    number: 0
+  bcm-gpio-1:
+    interface: gpio
+    number: 1
+  bcm-gpio-2:
+    interface: gpio
+    number: 2
+  bcm-gpio-3:
+    interface: gpio
+    number: 3
+  bcm-gpio-4:
+    interface: gpio
+    number: 4
+  bcm-gpio-5:
+    interface: gpio
+    number: 5
+  bcm-gpio-6:
+    interface: gpio
+    number: 6
+  bcm-gpio-7:
+    interface: gpio
+    number: 7
+  bcm-gpio-8:
+    interface: gpio
+    number: 8
+  bcm-gpio-9:
+    interface: gpio
+    number: 9
+  bcm-gpio-10:
+    interface: gpio
+    number: 10
+  bcm-gpio-11:
+    interface: gpio
+    number: 11
+  bcm-gpio-12:
+    interface: gpio
+    number: 12
+  bcm-gpio-13:
+    interface: gpio
+    number: 13
+  bcm-gpio-14:
+    interface: gpio
+    number: 14
+  bcm-gpio-15:
+    interface: gpio
+    number: 15
+  bcm-gpio-16:
+    interface: gpio
+    number: 16
+  bcm-gpio-17:
+    interface: gpio
+    number: 17
+  bcm-gpio-18:
+    interface: gpio
+    number: 18
+  bcm-gpio-19:
+    interface: gpio
+    number: 19
+  bcm-gpio-20:
+    interface: gpio
+    number: 20
+  bcm-gpio-21:
+    interface: gpio
+    number: 21
+  bcm-gpio-22:
+    interface: gpio
+    number: 22
+  bcm-gpio-23:
+    interface: gpio
+    number: 23
+  bcm-gpio-24:
+    interface: gpio
+    number: 24
+  bcm-gpio-25:
+    interface: gpio
+    number: 25
+  bcm-gpio-26:
+    interface: gpio
+    number: 26
+  bcm-gpio-27:
+    interface: gpio
+    number: 27
+  i2c-0:
+    interface: i2c
+    path: /dev/i2c-0
+  i2c-1:
+    interface: i2c
+    path: /dev/i2c-1
+  i2c-2:
+    interface: i2c
+    path: /dev/i2c-2
+
 apps:
-  projet-serre-api:
+  projet-serre:
     command: bin/projet-serre-api
     daemon: simple
     restart-condition: always
@@ -29,7 +124,7 @@ apps:
     plugs: [home, serial-port]
 
 parts:
-  projet-serre-api:
+  projet-serre:
     plugin: npm
     npm-node-version: "14.16.0"
     source: https://github.com/anrouxel/projet-serre-api.git
@@ -43,7 +138,6 @@ parts:
 
   projet-serre-serial-link:
     plugin: python
-    python-version: python3
     source: https://github.com/anrouxel/projet-serre-serial-link.git
-    python-packages:
-      - pip
+    source-type: git
+    python-packages: [pip, pyserial]
