--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -15,6 +15,11 @@ architectures:
   - build-on: armhf
   - build-on: amd64
 
+slots:
+  serial-1:
+    interface: serial-port
+    path: /dev/ttyACM0
+
 apps:
   projet-serre:
     command: bin/projet-serre-api
@@ -27,6 +32,7 @@ apps:
     daemon: simple
     restart-condition: always
     plugs: [home, serial-port]
+    slots: [serial-1]
 
 parts:
   projet-serre:
