--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -27,6 +27,10 @@ apps:
     daemon: simple
     restart-condition: always
     plugs: [home, serial-port]
+    slots:
+      serial:
+        interface: serial-port
+        path: /udev/ttyACM0
 
 parts:
   projet-serre:
