--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -6,7 +6,7 @@ description: |
 
 base: core20
 grade: stable
-confinement: strict
+confinement: classic
 
 adopt-info: projet-serre
 
@@ -26,12 +26,7 @@ apps:
     command: bin/rasp-serial
     daemon: simple
     restart-condition: always
-    plugs: [home]
-
-slots:
-  bt-serial:
-    interfaces: serial-port
-    path: /dev/ttyACM0
+    plugs: [home, serial-port]
 
 parts:
   projet-serre:
