--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -41,8 +41,14 @@ parts:
       - git
       - sed
 
-  projet-serre-serial-link:
-    plugin: python
-    source: https://github.com/anrouxel/projet-serre-serial-link.git
+  projet-serre-link:
+    plugin: npm
+    npm-node-version: "14.16.0"
+    source: https://github.com/anrouxel/projet-serre-api-link.git
     source-type: git
-    python-packages: [pip, pyserial]
+
+#  projet-serre-serial-link:
+#    plugin: python
+#    source: https://github.com/anrouxel/projet-serre-serial-link.git
+#    source-type: git
+#    python-packages: [pip, pyserial]
