--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -16,7 +16,7 @@ architectures:
 
 apps:
   projet-serre-api:
-    command: usr/bin/python3 $SNAP/bin/projet-serre-serial
+    command: bin/projet-serre-api
     daemon: simple
     restart-condition: always
     plugs: [home, network, network-bind]
